# silvervine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  ROADMAP.md  SECURITY.md  deny.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: auto-merge.yml  ci.yml
cloudflare-worker/: README.md  package.json  schema.sql  tsconfig.json  wrangler.toml
cloudflare-worker/src/: index.ts
docs/superpowers/plans/: 2026-05-04-neon-v2-orchestration-plan.md  2026-05-04-neon-v3-orchestration-plan.md
docs/superpowers/specs/: 2026-05-04-neon-rust-rewrite-design.md  2026-05-04-neon-v3-localhost-bridge-scaffolding-plan.md
docs/superpowers/teams/bridge/: handoff.md
docs/superpowers/teams/cli/: handoff.md
docs/superpowers/teams/core-engine/: handoff.md
docs/superpowers/teams/daemon/: handoff.md
docs/superpowers/teams/infra/: handoff.md
docs/superpowers/teams/orchestrator/: agent-guardrails.md  status.md
docs/superpowers/teams/platform/: handoff.md
docs/v3/: hardware-compat.md  license-faq.md  troubleshooting.md
scripts/: v3-bridge-setup.sh
src/: config.rs  error.rs  hooks.rs  lib.rs  lockfile.rs  log.rs  main.rs  migration.rs  notify.rs  test_support.rs
src/bridge/: config.rs  idd_fallback.rs  install.rs  iso.rs  kvmfr.rs  libvirt.rs  libvirt_xml.rs  license.rs  mod.rs  remediation.rs  unattended.rs
src/browsers/: discovery.rs  known.rs  mod.rs
src/cli/: completion.rs  doctor.rs  init.rs  launch.rs  list_browsers.rs  manpage.rs  mod.rs  patch.rs  repair.rs  setup.rs  status.rs  stream.rs  test.rs  uninstall.rs  update.rs
src/cli/stream/: init.rs  license.rs  mod.rs  repair.rs  start.rs  stop.rs  uninstall.rs
src/daemon/: ipc.rs  mod.rs  tray.rs  watcher.rs
src/daemon/lifecycle/: linux.rs  macos.rs  mod.rs
src/daemon/power/: linux.rs  macos.rs  mod.rs
src/eme/: codes.rs  mod.rs
src/patch/: backup.rs  linux.rs  macos.rs  mod.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/platform/capabilities/: linux.rs  macos.rs  mod.rs  tests.rs
src/widevine/: cache.rs  download.rs  extract.rs  manifest.rs  mod.rs  provider.rs
tests/: browsers_integration.rs  cli_surface.rs  feature_flag.rs  manifest_integration.rs  privileged_patch.rs  startup_migration.rs
tests/fixtures/: macos_system_profiler.json  widevinecdm.json
