[package]
name = "neon"
version = "2.0.0-rc.2"
edition = "2021"
rust-version = "1.85"
authors = ["Nicholas Raimbault <nraimbault16@gmail.com>"]
license = "MIT"
description = "Single-binary cross-platform DRM (Widevine) helper for Chromium-family browsers"
repository = "https://github.com/nicholasraimbault/neon"
homepage = "https://github.com/nicholasraimbault/neon"
readme = "README.md"
keywords = ["drm", "widevine", "chromium", "helium", "thorium"]
categories = ["command-line-utilities"]

[lib]
name = "neon"
path = "src/lib.rs"

[[bin]]
name = "neon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
# Error handling — categorized errors per spec.
thiserror = "2"
# Serde + formats for manifest, config, and state files.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
# HTTPS for manifest fetch — rustls only (cargo-deny bans openssl).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
# URL type used in the public `fetch_manifest` API.
url = "2"
# XDG / platform-conventional paths.
dirs = "6"
# `flock`-based exclusive lockfile.
fs2 = "0.4"
# SHA-512 verification for the Widevine CRX3 download (Phase 2).
sha2 = "0.11"
# CRX3 ZIP body extraction. Default features pull lots of compression
# methods we don't need; only deflate is required for Mozilla's CRX3.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Process scanning for browser-running detection (Phase 2).
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
# Direct FFI for `renameat2(RENAME_EXCHANGE)` (Linux) and
# `renameatx_np(RENAME_SWAP)` (macOS): used by `crate::platform` for the
# atomic-rename helper. nix's renameat2 wrapper is gated on
# `target_env = "gnu"` (excludes musl), and nix has no macOS swap wrapper,
# so the platform module calls libc directly.
libc = "0.2"
# Structured logging used by daemon lifecycle / power modules. Other teams
# (cli, daemon) will plug in `tracing-subscriber` for the runtime; the
# library-level `tracing::info!`/`warn!` calls are no-ops without a
# subscriber installed.
tracing = "0.1"
# Tracing subscriber — the daemon::run() entry point installs this so the
# tracing!/warn!/info! calls scattered throughout the crate produce
# structured stderr output during a tray run.
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi"] }
# Native desktop notifications (notify-rust → libnotify on Linux,
# mac-notification-sys on macOS). macOS lacks action-button support
# (verified upstream limitation); we feature-gate any action-button code
# with `#[cfg(target_os = "linux")]`.
notify-rust = "4"
# Cross-platform filesystem watcher. Driven by inotify on Linux and
# FSEvents on macOS under the hood. We use the synchronous `Watcher`
# trait API; debouncing is done at our layer so we have full control of
# the per-browser dispatch.
notify = "8"
# Tray icon UI is platform-split:
#   - Linux: `ksni` — direct StatusNotifierItem implementation over
#     D-Bus. Zero GTK dep; works natively with any compositor that
#     speaks SNI (KDE Plasma, noctalia/Quickshell, sway+waybar,
#     Hyprland+waybar, Cinnamon, etc.). Helium/Thorium/uChromium users
#     skew toward minimal Arch/Fedora/NixOS where libappindicator isn't
#     installed by default; ksni lets us render a tray with no extra
#     packages on those systems.
#   - macOS: `tray-icon` (Tauri's crate) for its NSStatusItem backend.
#     We disable default features (libxdo for keyboard accelerators) we
#     don't use.
# Linux-only ksni declaration is in `[target.'cfg(target_os = "linux")'`.
# macOS-only tray-icon declaration is in `[target.'cfg(target_os = "macos")'`.
# Interactive prompts for `neon init`. The default features are fine for
# our use; the crate gracefully falls back to non-interactive mode when
# stdin isn't a TTY (we explicit-check `is_terminal()` at the call sites
# anyway so we can switch to defaults without prompting).
dialoguer = { version = "0.12", default-features = false }
# Cross-platform terminal control for `neon status --watch`. We use only
# the cursor + clear primitives; no async event polling needed.
crossterm = { version = "0.29", default-features = false }
# Shell completion script generation for `neon completion <shell>`.
clap_complete = "4.6"
# Man-page generation for `neon manpage`.
clap_mangen = "0.3"
# URL-encoding for the `neon doctor --share` issue-template URL builder.
urlencoding = "2"
# Tracing subscriber's rolling-file appender — used by `crate::log` to
# rotate the daemon's `~/.cache/neon/logs/neon.log`.
tracing-appender = "0.2"
# PNG decoder for the embedded tray icon. Used only by the Linux ksni
# tray backend to convert `linux-app/neon.png` into the ARGB32 pixel
# buffer ksni::Icon expects. ~70KB compile cost; smaller and more
# focused than the full `image` crate, which we don't otherwise need.
png = "0.18"

# macOS-specific deps: ObjC FFI for NSWorkspace wake notifications.
# `block2` is required because NSNotificationCenter takes a block-typed
# handler argument; objc2-app-kit doesn't enable the dep transitively
# under default features.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
# objc2-foundation 0.2 feature-gates every Foundation class behind its
# own cargo feature. We need NSString and NSNotification for the
# sleep/wake observer in src/daemon/power/macos.rs.
# (NSNotificationCenter ships under the NSNotification feature; no
# separate feature flag exists for it in 0.2.x.)
objc2-foundation = { version = "0.2", features = [
    # NSObject is the typed root class — used as the observer handle
    # returned by `addObserverForName:`.
    "NSObject",
    "NSString",
    "NSNotification",
    # NSOperation covers NSOperationQueue, which appears as the `queue:`
    # parameter of `addObserverForName:object:queue:usingBlock:` —
    # without it the method isn't generated.
    "NSOperation",
    # `block2` exposes the block-taking methods (e.g.
    # `addObserverForName:object:queue:usingBlock:` on
    # NSNotificationCenter, which we use for the wake observer).
    "block2",
] }
# objc2-app-kit 0.2 likewise gates NSWorkspace (and the
# NSWorkspaceDidWakeNotification static) behind the NSWorkspace feature.
objc2-app-kit = { version = "0.2", features = ["NSWorkspace"] }
# Pin block2 to 0.5: 0.6 pairs with objc2 0.6 and changed the
# `IntoBlock` trait signature. Bumping requires a coordinated
# migration to the 0.6 ecosystem across `src/daemon/power/macos.rs`
# (and other macOS FFI sites). Listed in dependabot.yml's ignore.
block2 = "~0.5"
# NSStatusItem-backed tray for macOS via Tauri's tray-icon crate.
# Default features pull libxdo for keyboard accelerators we don't use,
# so opt out. The ksni migration in commit 735dcfe moved this dep here
# from the cross-platform [dependencies] block; the move was documented
# but the line itself was dropped, which broke macOS builds.
tray-icon = { version = "0.24", default-features = false }

# Linux-specific deps:
#  - `zbus` for the systemd-logind PrepareForSleep signal. Default
#    features include async runtime integration we don't need; we use
#    only the blocking API on a dedicated background thread.
#  - `ksni` for the system tray (StatusNotifierItem over D-Bus). Default
#    features pull `tokio`; we use the runtime-agnostic `blocking`
#    feature instead so we don't need to introduce an async runtime.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5" }
ksni = { version = "0.3", default-features = false, features = ["blocking", "async-io"] }
[dev-dependencies]
# Sandboxed temporary directories for filesystem-shaped tests.
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app.
#  - shell: the universal `curl … | sh` installer; works on Linux + macOS
#           when the user doesn't have a native package manager preference.
#
# TODO(macos-validation): once the V2 binary is smoke-tested end-to-end on
# a real Mac, flip this to `["shell", "homebrew"]` and uncomment `tap` +
# `publish-jobs` below. cargo-dist will then auto-publish a Formula to
# the homebrew-neon tap on every release tag. Until then, Mac users
# continue to get V1 via the existing `brew install` (the tap repo
# still points at v1.0.0 bash scripts) — known-good rather than
# unvalidated-V2.
installers = ["shell"]
# Homebrew tap that will receive the auto-generated Formula once the
# `homebrew` installer above is re-enabled.
# tap = "nicholasraimbault/homebrew-neon"
# Activate the Homebrew publish job. Needs a `HOMEBREW_TAP_TOKEN` repo
# secret (a fine-grained PAT scoped to homebrew-neon with
# `contents:write` + `pull-requests:write`) for cargo-dist to push the
# Formula commit.
# publish-jobs = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Which actions to run on pull requests
pr-run-mode = "plan"
